--- a/app/src/main/res/layout/fragment_detailed_item.xml
+++ b/app/src/main/res/layout/fragment_detailed_item.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.ItemFragment">
+        tools:context=".ui.details.ItemFragment">
         <TextView
             android:layout_width="match_parent"
             android:textSize="20sp"
