--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -9,6 +9,6 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.ItemListFragment"
+    tools:context=".ui.list.ItemListFragment"
     tools:itemCount="20"
     tools:listitem="@layout/fragment_item" />
