--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="10dp"
+
         >
 
         <TextView
+            android:layout_weight="1"
             android:id="@+id/itemID"
-            android:layout_width="match_parent"
+            tools:text="Item -1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="start|center_vertical"
-            android:layout_margin="10dp"
             android:textSize="14sp"
+            android:gravity="center_vertical"
             android:textAppearance="?attr/textAppearanceListItem" />
+        <View
+            android:id="@+id/clearView"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end|center_vertical"
+            android:backgroundTint="#F44336"
+            android:background="@drawable/ic_baseline_clear_24"
+            />
     </LinearLayout>
 </layout>
